# ArtificialProgramingLanguage

./: .gitignore  ADVANCED_FEATURES.md  ALL_FIXES_APPLIED.md  BRANDING.md  BUILD_AND_TEST.md  BUILD_STATUS_REPORT.md  CHANGELOG.md  COMPILATION_FIXES.md  COMPLETE_SETUP_SUMMARY.md  COMPREHENSIVE_BUILD_TEST.sh  CONTRIBUTING.md  CURRENT_BUILD_STATUS.md  Cargo.toml  FINAL_FEATURE_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  INTERNAL_MASTER_PLAN.md  LICENSE  NEW_FEATURES_IMPLEMENTATION.md  NEXT_GENERATION_FEATURES.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICK_RELEASE_GUIDE.md  QUICK_START.md  README.md  RELEASE_IMPLEMENTATION_COMPLETE.md  RELEASE_SETUP.md  TECHNICAL_SUMMARY.md  UPGRADE_PLAN.md  VEZ_FUNCTIONALITY_REPORT.md  VEZ_FUTURE_VISION.md  build.sh  build_output.txt  compile_errors.txt  comprehensive_build_report.txt  comprehensive_test.sh  comprehensive_test_output.txt  demo.rs  install.ps1  install.sh  (+8 more)
compiler/: ARCHITECTURE.md  Cargo.toml
compiler/src/: error.rs  lib.rs  main.rs  span.rs  symbol.rs
compiler/src/ai/: context.rs  mod.rs  patterns.rs  prompts.rs
compiler/src/allocator/: arena.rs  mod.rs  pool.rs  region.rs
compiler/src/async_runtime/: executor.rs  mod.rs
compiler/src/borrow/: checker.rs  lifetime.rs  mod.rs  ownership.rs
compiler/src/codegen/: linker.rs  llvm_backend.rs  mod.rs  target.rs
compiler/src/consteval/: mod.rs
compiler/src/dependent_types/: checker.rs  inference.rs  mod.rs  types.rs
compiler/src/diagnostics/: mod.rs  suggestions.rs
compiler/src/docgen/: extract.rs  html.rs  markdown.rs  mod.rs  render.rs
compiler/src/driver/: mod.rs
compiler/src/effects/: checker.rs  effect.rs  inference.rs  mod.rs
compiler/src/ffi/: mod.rs
compiler/src/formatter/: comment.rs  config.rs  format.rs  indent.rs  mod.rs
compiler/src/gpu/: amd_optimize.rs  mod.rs  rocm.rs
compiler/src/intrinsics/: atomic.rs  gpu.rs  memory.rs  mod.rs  simd.rs  timing.rs
compiler/src/ir/: builder.rs  instructions.rs  mod.rs  ssa.rs  types.rs
compiler/src/lexer/: mod.rs  tests.rs  token.rs
compiler/tests/: integration_test.rs
tools/lsp/: Cargo.toml
tools/vpm/: Cargo.toml
(+167 files in other folders)
