[workspace]
members = [
    "compiler",
    "tools/vpm",
    "tools/lsp",
    "tools/testing",
    "tools/repl",
    "benchmarks",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["VeZ Team <team@vez-lang.org>"]
license = "MIT"
repository = "https://github.com/vez-lang/vez"

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
