[package]
name = "vez_compiler"
version = "0.1.0"
edition = "2021"
authors = ["VeZ Contributors"]
description = "The VeZ programming language compiler"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
crossbeam-channel = "0.5"
num_cpus = "1.16"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]

[lib]
name = "vezc"
path = "src/lib.rs"

[[bin]]
name = "vezc"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
