[package]
name = "vez_lsp"
version = "1.0.0"
edition = "2021"
authors = ["VeZ Team <team@vez-lang.org>"]
description = "VeZ Language Server Protocol implementation"
license = "MIT"

[[bin]]
name = "vez-lsp"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
