[package]
name = "vpm"
version = "1.0.0"
edition = "2021"
authors = ["VeZ Team <team@vez-lang.org>"]
description = "VeZ Package Manager"
license = "MIT"

[[bin]]
name = "vpm"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
